test_build_log.txt
> Task :generateJte UP-TO-DATE
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
C:\Development\Owner\home-repair\src\test\java\com\livingcostcheck\home_repair\seo\SeoVerificationTest.java:48: error: constructor StaticPageGeneratorService in class StaticPageGeneratorService cannot be applied to given types;
        pageGenerator = new StaticPageGeneratorService(verdictService, linkBuilder, templateEngine);
                        ^
  required: VerdictEngineService,InternalLinkBuilder,TemplateEngine,VerdictSeoService
  found:    VerdictEngineService,InternalLinkBuilder,TemplateEngine
  reason: actual and formal argument lists differ in length
1 error

[Incubating] Problems report is available at: file:///C:/Development/Owner/home-repair/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Development\Owner\home-repair\src\test\java\com\livingcostcheck\home_repair\seo\SeoVerificationTest.java:48: error: constructor StaticPageGeneratorService in class StaticPageGeneratorService cannot be applied to given types;
          pageGenerator = new StaticPageGeneratorService(verdictService, linkBuilder, templateEngine);
                          ^
    required: VerdictEngineService,InternalLinkBuilder,TemplateEngine,VerdictSeoService
    found:    VerdictEngineService,InternalLinkBuilder,TemplateEngine
    reason: actual and formal argument lists differ in length
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.3/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
4 actionable tasks: 1 executed, 3 up-to-date
